@@ -385,6 +385,10 @@ new([{'acl', []} | Terms], Config) ->
 new([{'acl', [{A, [_ | _]} | _] = Value} | Terms], Config)
     when is_atom(A) ->
     new(Terms, Config#config{acl = acl_lookup_new(Value)});
+new([{'nodes', automatic} | Terms], Config) ->
+    application:start(combonodefinder),
+    new(Terms, Config);
+new([{'nodes', [A | _] = Value} | Terms], Config)
 new([{'nodes', []} | Terms], Config) ->
     new(Terms, Config);
 new([{'nodes', [A | _] = Value} | Terms], Config)
