@@ -11,6 +11,19 @@
     {error_logger_mf_maxfiles, 128},
     {utc_log, true}
 ]},
+{ec2nodefinder, [
+    {group, "PUT group-name here"},
+    {private_key, "PUT private-key-filepath here"},
+    {cert, "PUT cert-filepath here"},
+    {ping_timeout_sec, 60},
+    {ec2_home, "/usr"},
+    {ec2_home, "/usr/lib/jvm/java-6-openjdk-amd64/jre"}
+]},
+{nodefinder, [
+    {addr, {224,0,0,1}},
+    {port, 4475},
+    {multicast_ttl, 1}
+]},
 {cloudi, [
     {configuration, "@cloudi_confdir@/cloudi.conf"}
 ]}].
